--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ Mobile first styling
     /* Alignitems is vertical */
     align-items: center;
 
-    height: 100%;
+    height: 100dvh;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
 
@@ -77,6 +77,8 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    align-self: flex-end;
+    /* margin-top: auto; */
 }
 
 
